<resources>
    <string name="app_name">Adv Master-Detail</string>

    <string name="title_category_list">Category List</string>
    <string name="title_category_detail">Category Detail</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="item_content">Item Content</string>
    <string name="item_details">Item Details</string>


    <!-- Pantalla Login -->
    <string name="login">Login</string>
    <string name="login_button_text">INICIAR SESIÓN</string>
    <string name="guest_button_text">ENTRAR COMO INVITADO</string>
    <string name="register_button_text">REGISTRARME</string>

    <string name="email_hint">Correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="no_account_text">Si no tienes cuenta...</string>

    <string name="login_error_message">Correo o contraseña incorrectos</string>

    <string name="espagnol">Español</string>
    <string name="english">English</string>

    <!-- Pantalla Register -->
    <string name="register">Register</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellido_hint">Apellido</string>
    <string name="register_hint">REGISTRARME</string>

    <string name="register_error_exist_message">Usuario ya existente</string>

    <string name="register_error_add_message">Error de registro</string>

    <string name="register_correct_add_message">Usuario registrado correctamente</string>


    <!-- Pantalla CategoryList -->
    <string name="category">CATEGORÍAS</string>
    <string name="texto_introduccion">Elige una categoría para explorar las capacidades de la IA </string>
    <string name="fav_error_message">Inicia sesión para acceder a favoritos</string>


    <!-- Pantalla ProductLis -->
    <string name="tools">HERRAMIENTAS</string>

    <string name="texto_introduccion_product">Selecciona la herramienta que mejor se adapte a tus necesidades</string>

    <string name="favorite_error_add_message">Error al añadir favorito</string>

    <string name="favorite_correct_add_message">Favorito guardado correctamente</string>

    <string name="favorite_error_remove_message">Error eliminando favorito</string>

    <string name="favorite_correct_remove_message">Favorito eliminado correctamente</string>



    <!-- Pantalla Favoritos -->
    <string name="fav">FAVORITOS</string>
    <string name="texto_introduccion_fav">Accede rápidamente a tus herramientas guardadas</string>

</resources>