<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">


        <!-- Imagen robot -->
        <ImageView
            android:id="@+id/robotImage"
            android:layout_width="366dp"
            android:layout_height="273dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/robotlogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Campo Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="#6E64A6"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/robotImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#686386" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="#6E64A6"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="#686386"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Iniciar Sesión -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login"
            android:text="@string/login_button_text"
            android:textColor="#FFFFFF"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Botón Invitado -->
        <Button
            android:id="@+id/guestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_guest"
            android:text="@string/guest_button_text"
            android:textColor="#FFFFFF"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Botones Idiomas -->
        <LinearLayout
            android:id="@+id/languageButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/guestButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btn_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#D1C4E9"
                android:text="@string/espagnol"
                android:textColor="#4D4A4A"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#C5CAE9"
                android:text="@string/english"
                android:textColor="#4D4A4A"
                android:textAllCaps="false"/>
        </LinearLayout>

        <!-- Texto "no tienes cuenta" -->

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/no_account_text"
            android:textColor="#555555"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guestButton" />

        <!-- Botón Registrarte -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_register"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noAccountText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
